# StoryForge

./: .gitignore  LICENSE  README.md  pyproject.toml
storyforge/: __init__.py  __main__.py
storyforge/core/: __init__.py  generators.py  memory.py  novel_manager.py  prompts.py  rag.py
storyforge/ui/: __init__.py  app.py  chat_panel.py  dialogs.py  sidebar.py  style.py  theme.py  widgets.py  workers.py
