[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storyforge"
version = "1.0"
description = "AI-powered novel writer with vector memory, RAG, and a PyQt6 desktop UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kshitij Budholiya" }]
keywords = ["novel", "ai", "writing", "ollama", "pyqt6", "rag", "vector-database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Text Editors",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
]
dependencies = [
    "PyQt6>=6.4.0",
    "ollama>=0.2.0",
    "endee>=0.1.27",
]

[project.urls]
Homepage = "https://github.com/Kshitijbudholiya/StoryForge"
Issues   = "https://github.com/Kshitijbudholiya/StoryForge/issues"

[project.scripts]
storyforge = "storyforge.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["storyforge*"]

[tool.setuptools.package-data]
"storyforge" = ["py.typed"]
